
  *) Made it so XBITHACK behavior only occurs for files of type text/html, as
     any other file type doesn't really make sense. [Alexei Kosut]

  *) Slightly modified the API to allow handlers by things other than
     content type. Setting r->handler will override r->content_type in
     invoke_handler(). [Alexei Kosut]

  *) Added FLOCK_SERIALIZED_ACCEPT for those systems, like A/UX,
     that need mutex-capability but using fcntl-locking is
     expensive. [Jim Jagielski]

  *) Added in Cliff Skolnick's read_client_block patch (check for
     no reads and break) [Jim Jagielski]

  *) If there was no default MIME type defined, Apache sent Content-type:
     without a newline, thus swallowing the next header. Changed to send no
     Content-type: at all. [Ben Laurie]

  *) Long overdue revamp of the Cookies module to stop Apache cookies
     colliding with other cookies a site may be using.  Cookies are now
     always generated for every browser, not just Netscape (and clones)
     [Mark Cox]

  *) Clean up strings.h warning for SGI [Mark Cox]

  *) Add HAVE_MMAP to SCO 5. [Ben Laurie]

  *) SCO 5 reportedly (by Jay Thorne <jay@result.com>) requires
     FCNTL_SERIALIZED_ACCEPT. Added to conf.h. [Ben Laurie]

  *) Clear up some nasty (int)NULLs. [Ben Laurie]

  *) Clean code to warning level 3 under SCO 5. [Ben Laurie]

  *) Fix potential buffer overrun in mod_proxy.c. [Ben Laurie]

  *) Internal redirects now preserve HTTP headers [Rob Hartil]

  *) Adds SysV-based Shared Memory support for Apache [Jim Jagielski]

  *) Use bread() etc instead of fread() for reading/writing to client.
     Move the count of bytes sent into the buffering routines.
     Rewrite the buffering routines to provide bputc(), bgetc() macros.
     [David Robinson]

  *) Make hostname_lookups a per-directory core configuration variable.
     Replace all accesses to the connection.remote_host and remote_name
     variables to calls to get_remote_host(), which is now in http_core.c.